--- a/rcAdmin/_Menu.cshtml
+++ b/rcAdmin/_Menu.cshtml
@@ -15,6 +15,7 @@
     <li><a href="~/rcAdmin/ForwardingQuotation" id="forwardingQuotation">Forwarding Quotation</a></li>
     <li><a href="~/rcAdmin/ForwardingServices/IndexForwardingServices" id="forwardingservice">Forwarding Service</a></li>
     <li><a href="~/rcAdmin/ForwardingInvoice/IndexForwardingInvoice" id="forwardinginvoice">Forwarding Invoice</a></li>
+    <li><a href="~/rcAdmin/Accounting/" id="accounting">Accounting</a></li>
 </ul>
 <script type="text/javascript">
     var pageName = window.location.pathname.substring(window.location.pathname.lastIndexOf("/") + 1, window.location.pathname.lenght).toLowerCase();
