--- a/rcAdmin/ForwardingServices/IndexForwardingServices.cshtml
+++ b/rcAdmin/ForwardingServices/IndexForwardingServices.cshtml
@@ -34,7 +34,7 @@
                 alternatingRowStyle: "alt",
                 footerStyle: "pgr",
                 columns: grid.Columns(
-                    grid.Column(format: @<a href="EditPage.cshtml?id=@item.Id_Forwarding_Service" title="Edit Page" ><img
+                    grid.Column(format: @<a href="EditForwardingServices" title="Edit Page" ><img
                         src="../images/edit_page.gif" alt="Edit" class="rcGC" /></a>),
                     grid.Column(format: @<a href="WidgetsInSection.cshtml?pid=@item.Id_Forwarding_Service&pName=@item.Forwarding_Service_Name" title="Widgets"><img
                         src="images/widgets.gif" alt="Delete" class="rcGC" /></a>),
