--- a/rcAdmin/ForwardingCountries/Edit.cshtml
+++ b/rcAdmin/ForwardingCountries/Edit.cshtml
@@ -13,95 +13,48 @@
 
     var pId = Request["id"];
     var errMSG = "";
+
+    var db = Database.Open("Checking_Master");
+    var sqlSelect = "SELECT [Id_Forwarding_Country],t1.[Id_Forwarding_Service],t1.[Id_Forwarding_Zone],t1.[Id_Country],[Comment] "+
+    "FROM [Forwarding_Countries] t1 inner join Forwarding_Service t2 on t1.Id_Forwarding_Service = t2.Id_Forwarding_Service inner join dbo.Forwarding_Zone t3 on t1.Id_Forwarding_Zone = t3.Id_Forwarding_Zone inner join dbo.Countries t4 on t1.Id_Country = t4.Id_Country where Id_Forwarding_Country=@0";
+    var data = db.QuerySingle(sqlSelect, pId);
+    var pEditDate = DateTime.Now;
     
-    var db = Database.Open("razorC");
-    var sqlSelect = " Select * from rc_Pages where pId=@0";
-    var data = db.QuerySingle(sqlSelect,pId);
+    var fwService = data.Id_Forwarding_Service;
+    var country = data.Id_Country;
+    var fwZone = data.Id_Forwarding_Zone;
+    var pComment = data.Comment;
+    errMSG = fwService + country + fwZone + pComment;
 
-    var pName = data.pName;
-    var pTitle = data.pTitle;
-    var pText = data.pText;
-    var mTitle = data.mTitle;
-    var mDescription = data.mDescription;
-    var mKeywords = data.mKeywords;
-    var pMasterPage = data.pMasterPage;
-    var pEditDate = data.pEditDate;
-    var pBody = data.pBody;
-    var pBodyFile = data.pBodyFile;
+    var sqlFwdSv = "SELECT [Id_Forwarding_Service] ,[Forwarding_Service_Name] FROM [dbo].[Forwarding_Service]";
+    var dataForwardingSv = db.Query(sqlFwdSv);
 
-    Page.Title = Html.Raw("razorC.net" + " <a href=\"WidgetsInSection.cshtml?pid=" + pId + "&pName=" + pName + "\" title=\"Widgets\">"
-    + "<img src=\"images/widgets.gif\" alt=\"Widgets\" class=\"rcGC\" /></a>");
+    var sqlCountry = "SELECT [Id_Country],[Country_Name],[Comments] FROM [dbo].[Countries]";
+    var dataCountry = db.Query(sqlCountry);
+
+    var sqlFwZone = "SELECT [Id_Forwarding_Zone],[Id_Forwarding_Service],[Forwarding_Zone],[Comments]  FROM [dbo].[Forwarding_Zone]";
+    var dataZone = db.Query(sqlFwZone);
     
-    if (IsPost){
-        
-        
-         if (!Request["btnUpdate"].IsEmpty()){
-
-             //create backup copy before update
-             var sqlBackup = "Insert INTO rc_Backups (pwId, pwName, pwTitle, pwText, mTitle, mDescription, mKeywords, pMasterPage,pwDate, pBody, BType, pwFile) "
-                + "values (@0, @1, @2, @3, @4, @5, @6, @7, @8, @9, @10, @11)";
-             db.Execute(sqlBackup, pId, pName, pTitle, pText, mTitle, mDescription, mKeywords, pMasterPage, pEditDate, pBody, 'p', pBodyFile);
-             
-             //update record
-
-        pName = Request["pName"];
-        pTitle = Request["pTitle"];
-        pText = Request.Unvalidated("pText");
-        mTitle = Request["mTitle"];
-        mDescription = Request["mDescription"];
-        mKeywords = Request["mKeywords"];
-        pMasterPage = Request["pMasterPage"];
-        pEditDate = DateTime.Now;
-        pBody = false;
-        pBodyFile = Request["pBodyFile"];
-        if(Request["pBody"] == "on"){
-            pBody = true;
-        }
-
-        var sqlUpdate = "Update rc_Pages set "
-            + "pTitle=@0, pText=@1, mTitle=@2, mDescription=@3, mKeywords=@4, pMasterPage=@5, pEditdate=@6, pBody=@7, pBodyFile=@8 "
-            + "where pId=@9";
-
-        try
-        {
-            db.Execute(sqlUpdate, pTitle, pText, mTitle, mDescription, mKeywords, pMasterPage, pEditDate, pBody, pBodyFile, pId);
-            errMSG = "Data saved !";
-        }
-        catch (Exception ex)
-        {
-
-            errMSG = ex.Message.ToString();
-        }
-         }else         {
-             //from backup - load current version selected
-             if (Request["rcBackup"].AsInt() ==0){Response.Redirect("EditPage.cshtml?id=" + pId);}
-             //load from backup - post & btnUpdate is empty
-             var loadFromBackup = "Select * from rc_Backups where Id=@0";
-             var dataFromBackup = db.QuerySingle(loadFromBackup, Request["rcBackup"]);
-
-             pName = dataFromBackup.pwName;
-             pTitle = dataFromBackup.pwTitle;
-             pText = dataFromBackup.pwText;
-             mTitle = dataFromBackup.mTitle;
-             mDescription = dataFromBackup.mDescription;
-             mKeywords = dataFromBackup.mKeywords;
-             pMasterPage = dataFromBackup.pMasterPage;
-             pEditDate = dataFromBackup.pwDate;
-             pBody = dataFromBackup.pBody;
-             pBodyFile = dataFromBackup.pwFile;
-         }
-    }
-
-    int numberOfBackups = 0;
-    var selectBackups = "Select Id, pwDate from rc_Backups where bType='p' and pwID=@0 order by id Desc";
-    var dataBackups = db.Query(selectBackups, pId);
-    numberOfBackups = dataBackups.Count();
-    //delete old backups, we want keep only top 5 backups per page/widget
-    if (numberOfBackups > 5)
+    if (IsPost)
     {
-        int TopRecords = numberOfBackups - 5;
-        var deleteBackups = "Delete from rc_Backups where Id in (Select TOP " + TopRecords + " Id from rc_Backups where bType='p' and pwID=@0 order by Id Asc)";
-        db.Execute(deleteBackups, pId);
+        if (!Request["btnUpdate"].IsEmpty())
+        {
+
+            fwService = int.Parse(Request["fwService"]);
+            country =int.Parse(Request["country"]);
+            fwZone = int.Parse(Request["fwZone"]);
+            pComment = Request["pComment"];
+            errMSG = fwService + country + fwZone + pComment;
+
+            String sql = "UPDATE Forwarding_Countries " +
+            "SET [Id_Forwarding_Service] = @0 " +
+            ",[Id_Forwarding_Zone] = @1 " +
+            ",[Id_Country] = @2 " +
+            ",[Comment] = @3 " +
+            "WHERE Id_Forwarding_Country = @4";
+
+            db.Execute(sql, fwService, fwZone, country, pComment, pId);
+        }
     }
 
 
@@ -155,76 +108,55 @@
 </script>
 }
 @section menu{
-@RenderPage("_Menu.cshtml")
+@RenderPage("../_Menu.cshtml")
 }
 <form action="" method="post" id="editPage">
  <fieldset>
-        <legend>Edit Page | <a href="~/rcAdmin/AllPages">All Pages</a> | <a href="~/rcAdmin/NewPage">Create Page</a> </legend>
+        <legend>Edit Page | <a href="~/rcAdmin/ForwardingCountries">All Forwarding Countries</a> | <a href="~/rcAdmin/ForwardingCountries/New">Create Forwarding Country</a> </legend>
         @errMSG
         Edited: @pEditDate 
         <ol>
-                <li>
-                <label for="pName">Name:</label>
-                <input type="text" name="pName" id="pName" value="@pName" readonly="readonly" maxlength="100" /> <img src="images/help.gif" alt="help" title="Name of the page. You CANNOT change this." />
-                </li>
-
-               <li>
-                <label for="pMasterPage">Layout:</label>
-                <select id="pMasterPage" name="pMasterPage">
-               @foreach (var f in fileInfo)
-               {
-                <option value="@f.Name" @if (pMasterPage == f.Name)
-                                        {<text>selected="selected"</text>}>@rcFunctions.CleanRCNames(f.Name)</option>
-               }
-                </select>  <img src="images/help.gif" alt="help" title="Layout/theme that razorC will use to render the page. All layouts are in rcLayouts folder - you can change/modify them to fit your needs" />
+            <li>
+                <label for="pMasterPage">Forwarding Service:</label>
+                <select id="fwService" name="fwService" @Validation.For("fwService")>
+                    @foreach (var f in dataForwardingSv)
+                    {
+                        <option value="@f.Id_Forwarding_Service" @if (fwService == f.Id_Forwarding_Service)
+                                                                 { <text> selected="selected" </text>         }>@rcFunctions.CleanRCNames(f.Forwarding_Service_Name)</option>
+                    }
+                </select> <img src="images/help.gif" alt="help" title="Select layout/theme for new page. All layouts are in rcLayouts folder - you can add/change/modify them to fit your needs" /> @Html.ValidationMessage("fwService")
             </li>
 
-                <li>
-                <label for="pTitle">Title:</label>
-                <input type="text" name="pTitle" id="pTitle" value="@pTitle"  maxlength="250" /> <img src="images/help.gif" alt="help" title="Title of the page. Depending on template for body section (located in rcTemplates\Body\ folder) it will or will not be visible to end user" />
-                </li>
-                <li>
-                <label for="pBody">Body template:</label>
-                 <select id="pBodyFile" name="pBodyFile">
-               @foreach (var fName in pBodies)
-               {
-                <option value="@fName" @if (pBodyFile == fName)
-                                        {<text>selected="selected"</text>}>@rcFunctions.CleanRCNames(fName)</option>
-               }
-                </select>  <img src="images/help.gif" alt="help" title="Template that will be used to render a body part of your page. All body templates are in rcTempaltes/Body folder - you can add/change/modify them to fit your needs" />
-                Render body:<input id="pBody" name="pBody" type="checkbox" @if (pBody)
-                                                                           {<text>checked="checked"</text>} /> <img src="images/help.gif" alt="help" title="Should be selected for most of the pages, unless you need page that ONLY renders widgets in sections..." />
-                </li>
+            <li>
+                <label for="country">Country:</label>
+                <select id="country" name="country" @Validation.For("country")>
+                    @foreach (var f in dataCountry)
+                    {
+                        <option value="@f.Id_Country" @if (country == f.Id_Country)
+                                                      { <text> selected="selected" </text>           }>@rcFunctions.CleanRCNames(f.Country_Name)</option>
+                    }
+                </select> <img src="images/help.gif" alt="help" title="Select layout/theme for new page. All layouts are in rcLayouts folder - you can add/change/modify them to fit your needs" /> @Html.ValidationMessage("country")
+            </li>
+
+            <li>
+                <label for="fwZone">Forwading Zone:</label>
+                <select id="fwZone" name="fwZone" @Validation.For("fwZone")>
+                    @foreach (var f in dataZone)
+                    {
+                        <option value="@f.Id_Forwarding_Zone" @if (fwZone == f.Id_Forwarding_Zone)
+                                                              { <text> selected="selected" </text>            }>@rcFunctions.CleanRCNames(f.Forwarding_Zone)</option>
+                    }
+                </select> <img src="images/help.gif" alt="help" title="Select layout/theme for new page. All layouts are in rcLayouts folder - you can add/change/modify them to fit your needs" /> @Html.ValidationMessage("fwZone")
+            </li>
+            <li>
+                <label for="pComment">Comments:</label>
+                <input type="text" name="pComment" id="pComment" value="@pComment" maxlength="100" @Validation.For("pComment") /> <img src="images/help.gif" alt="help" title="Name of the new page. Ex.: about-us or contact-us" /> @Html.ValidationMessage("pComment")
+            </li>
             </ol>
-            <textarea id="pText" name="pText" cols="80" rows="15">@pText</textarea>
+            
      <input type="submit" name="btnUpdate" value="Update" />
-      <select id="rcBackup" name="rcBackup">
-     <option value="-1">Load from backup</option>
-               @foreach (var f in dataBackups.Take(5) )
-               {
-                <option value="@f.Id">@f.pwDate</option>
-               }
-          <option value="0">Load current version</option>
-                </select> <img src="images/help.gif" alt="help" title="Load content from backup. Every time you update widget/page razorC will create backup of that widget/page. By default last 5 version of widget/page are stored in rc_Backups table." />
+     <img src="images/help.gif" alt="help" title="Load content from backup. Every time you update widget/page razorC will create backup of that widget/page. By default last 5 version of widget/page are stored in rc_Backups table." />
        
 </fieldset> 
 
-
-<fieldset>
-        <legend>Edit Meta Tags</legend>
-        <ol>
-                <li>
-                <label for="mTitle">Title:</label>
-                <input type="text" name="mTitle" id="mTitle" value="@mTitle" maxlength="100" /> <img src="images/help.gif" alt="help" title="Meta tag: Title" />
-                </li>
-                <li>
-                <label for="mDescription">Description:</label>
-                <input type="text" name="mDescription" id="mDescription" value="@mDescription" maxlength="200" /> <img src="images/help.gif" alt="help" title="Meta tag: Description" />
-                </li>
-                <li>
-                <label for="mKeywords">Keywords:</label>
-                <input type="text" name="mKeywords" id="mKeywords" value="@mKeywords" maxlength="200" /> <img src="images/help.gif" alt="help" title="Meta tag: keywords" />
-                </li>
-                </ol>
-                </fieldset>
 </form>
