--- a/rcAdmin/ForwardingCountries/Index.cshtml
+++ b/rcAdmin/ForwardingCountries/Index.cshtml
@@ -34,8 +34,9 @@
                 alternatingRowStyle: "alt",
                 footerStyle: "pgr",
                 columns: grid.Columns(
-                    grid.Column(format: @<a href="EditPage.cshtml?id=@item.Id_Forwarding_Country" title="Edit Page" ><img
-                        src="images/edit_page.gif" alt="Edit" class="rcGC" /></a>),
+                    grid.Column(format: @<a href="~/rcAdmin/ForwardingCountries/Edit?id=@item.Id_Forwarding_Country" title="Edit Page">
+    <img src="images/edit_page.gif" alt="Edit" class="rcGC" />
+</a>),
                     grid.Column(format: @<a href="WidgetsInSection.cshtml?pid=@item.Id_Forwarding_Country&pName=@item.Comment" title="Widgets"><img
                         src="images/widgets.gif" alt="Delete" class="rcGC" /></a>),
                                                                                    grid.Column("Comment", "Comment", style: "rcGB"),
