Chu Update Menu nhe
Update Menu

--- a/rcAdmin/HandlingFee/New.cshtml
+++ b/rcAdmin/HandlingFee/New.cshtml
@@ -97,7 +97,7 @@
             </li>
             <li>
                 <label for="pComment">Handling Fee:</label>
-                <input type="text" name="price" id="price" value="@fee" maxlength="100" @Validation.For("price") /> <img src="images/help.gif" alt="help" title="Name of the new page. Ex.: about-us or contact-us" /> @Html.ValidationMessage("fee")
+                <input type="text" name="fee" id="fee" value="@fee" maxlength="100" @Validation.For("fee") /> <img src="images/help.gif" alt="help" title="Name of the new page. Ex.: about-us or contact-us" /> @Html.ValidationMessage("fee")
             </li>
         </ol>
         <p class="form-actions">
