--- a/rcAdmin/_Menu.cshtml
+++ b/rcAdmin/_Menu.cshtml
@@ -2,6 +2,7 @@
 }
 <a href="~/Default" class="top">Your Site</a>
 <ul>
+    @*Duclm update menu nhe*@
     <li><a href="~/rcAdmin/Default" id="default">Dashboard</a></li>
     <li><a href="~/rcAdmin/AllPages" id="allpages">Pages</a></li>
     <li><a href="~/rcAdmin/AllWidgets" id="allwidgets">Widgets</a></li>
