--- a/rcAdmin/_Menu.cshtml
+++ b/rcAdmin/_Menu.cshtml
@@ -1,24 +1,36 @@
 ﻿@{
 }
+<link rel="stylesheet" type="text/css" href="css/menu.css"/>
+<script type='text/javascript' src='css/menu_jquery.js'></script>
 <a href="~/Default" class="top">Your Site</a>
-<ul>
-    <li><a href="~/rcAdmin/Default" id="default">Dashboard</a></li>
-    <li><a href="~/rcAdmin/AllPages" id="allpages">Pages</a></li>
-    <li><a href="~/rcAdmin/AllWidgets" id="allwidgets">Widgets</a></li>
-    <li><a href="~/rcAdmin/SimpleMenu" id="simplemenu">Simple Menu</a></li>
-    <li><a href="~/rcAdmin/Editor" id="editor">File Editor</a></li>
-    <li><a href="~/rcAdmin/SiteSettings" id="sitesettings">Site Settings</a></li>
-    <li><a href="~/rcAdmin/ChangePassword" id="changepassword">Change Password</a></li>    
-    <li><a href="~/rcAdmin/Countries" id="country">Country</a></li>
-    <li><a href="~/rcAdmin/ForwardingCountries" id="forwardingcountry">Forwarding Country</a></li>
-    <li><a href="~/rcAdmin/ForwardingZone" id="forwardingZone">Forwarding Zone</a></li>
-    <li><a href="~/rcAdmin/ForwardingQuotation" id="forwardingQuotation">Forwarding Quotation</a></li>
-    <li><a href="~/rcAdmin/ForwardingServices/IndexForwardingServices" id="forwardingservice">Forwarding Service</a></li>
-    <li><a href="~/rcAdmin/ForwardingInvoice/IndexForwardingInvoice" id="forwardinginvoice">Forwarding Invoice</a></li>
-    <li><a href="~/rcAdmin/HandlingFee" id="forwardinginvoice">Handing Fee</a></li>
-    <li><a href="~/rcAdmin/Accounting" id="accounting">Accounting</a></li>
-</ul>
-<script type="text/javascript">
+<div id="cssmenu">
+    <ul>
+        <li class="has-sub"><a href="#"><span>Products</span></a>
+            <ul>
+                <li><a href="~/rcAdmin/Default" id="default">Dashboard</a></li>
+                <li><a href="~/rcAdmin/AllPages" id="allpages">Pages</a></li>
+                <li><a href="~/rcAdmin/AllWidgets" id="allwidgets">Widgets</a></li>
+                <li><a href="~/rcAdmin/SimpleMenu" id="simplemenu">Simple Menu</a></li>
+                <li><a href="~/rcAdmin/Editor" id="editor">File Editor</a></li>
+                <li><a href="~/rcAdmin/SiteSettings" id="sitesettings">Site Settings</a></li>
+                <li><a href="~/rcAdmin/ChangePassword" id="changepassword">Change Password</a></li>
+            </ul>
+        </li>
+        <li class="has-sub"><a href="#"><span>Form</span></a>
+            <ul>
+                <li><a href="~/rcAdmin/Countries" id="country">Country</a></li>
+                <li><a href="~/rcAdmin/ForwardingCountries" id="forwardingcountry">Forwarding Country</a></li>
+                <li><a href="~/rcAdmin/ForwardingZone" id="forwardingZone">Forwarding Zone</a></li>
+                <li><a href="~/rcAdmin/ForwardingQuotation" id="forwardingQuotation">Forwarding Quotation</a></li>
+                <li><a href="~/rcAdmin/ForwardingServices/IndexForwardingServices" id="forwardingservice">Forwarding Service</a></li>
+                <li><a href="~/rcAdmin/ForwardingInvoice/IndexForwardingInvoice" id="forwardinginvoice">Forwarding Invoice</a></li>
+                <li><a href="~/rcAdmin/HandlingFee" id="forwardinginvoice">Handing Fee</a></li>
+                <li><a href="~/rcAdmin/Accounting" id="accounting">Accounting</a></li>
+            </ul>
+        </li>
+    </ul>
+</div>
+@*<script type="text/javascript">
     var pageName = window.location.pathname.substring(window.location.pathname.lastIndexOf("/") + 1, window.location.pathname.lenght).toLowerCase();
     if (pageName.match("^editpage") || pageName.match("^newpage") || pageName.match("^widgetsinsection")) {
         $('#allpages').toggleClass('selected');
@@ -31,4 +43,4 @@
 
     }
     $('#' + pageName).toggleClass('selected');
-</script>
+</script>*@
