--- a/rcAdmin/_Menu.cshtml
+++ b/rcAdmin/_Menu.cshtml
@@ -1,7 +1,10 @@
 ﻿@{
 }
-<link rel="stylesheet" type="text/css" href="css/menu.css"/>
-<script type='text/javascript' src='css/menu_jquery.js'></script>
+
+
+<link rel="stylesheet" type="text/css" href="~/rcAdmin/css/menu.css"/>
+<script type='text/javascript' src='~/rcAdmin/css/menu_jquery.js'></script>
+
 <a href="~/Default" class="top">Your Site</a>
 <div id="cssmenu">
     <ul>
