--- a/rcLayouts/_rcDefault.cshtml
+++ b/rcLayouts/_rcDefault.cshtml
@@ -12,6 +12,10 @@
     <script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.10.2.js"></script>
     <script src="/rcLayouts/default/js/bootstrap.min.js"></script>
     <script src="/rcLayouts/default/js/holder.js"></script>
+
+    
+<link rel="stylesheet" type="text/css" href="~/rcAdmin/css/menu.css"/>
+<script type='text/javascript' src='~/rcAdmin/css/menu_jquery.js'></script>
     <!--Validation-->
       <script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.11.1/jquery.validate.js"></script>
       <script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/mvc/4.0/jquery.validate.unobtrusive.js"></script>
