--- a/rcAdmin/css/menu.css
+++ b/rcAdmin/css/menu.css
@@ -1,14 +1,14 @@
 #cssmenu,
 #cssmenu ul,
-#cssmenu ul li
-/*#cssmenu ul li a*/ {
+#cssmenu ul li,
+#cssmenu ul li a {
   margin: 0;
-  padding: 0 9px;
+  padding: 0;
   border: 0;
   list-style: none;
   line-height: 1;
   display: block;
-  /*position: relative;*/
+  position: relative;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
@@ -18,6 +18,12 @@
   font-family: Helvetica, Arial, sans-serif;
   color: #ffffff;
 }
+#cssmenu>ul {
+    width: 200px;
+}
+#cssmenu>ul>li>ul>li>a {
+  padding: 15px 15px 27px 15px;
+}
 #cssmenu ul ul {
   display: none;
 }
@@ -25,7 +31,7 @@
   float: right;
 }
 #cssmenu > ul > li > a {
-  padding: 8px 13px 4px;
+  padding: 15px 0px 25px 15px;
   border-left: 1px solid #1682ba;
   border-right: 1px solid #1682ba;
   border-top: 1px solid #1682ba;
@@ -107,20 +113,14 @@
   border-bottom: 1px solid #32373e;
   border-left: 1px solid #32373e;
   border-right: 1px solid #32373e;
-  padding: 8px 14px 4px;
+  padding: 10px 20px;
   z-index: 1;
   text-decoration: none;
   font-size: 13px;
   color: #eeeeee;
   background: #49505a;
   box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
-  margin-left: -36px;
 }
-
-#cssmenu>ul>li>ul>li {
-    padding: 0;
-}
-
 #cssmenu ul ul li:hover > a,
 #cssmenu ul ul li.open > a,
 #cssmenu ul ul li.active > a {
