--- a/rcAdmin/_Menu.cshtml
+++ b/rcAdmin/_Menu.cshtml
@@ -29,6 +29,8 @@
                 <li><a href="~/rcAdmin/ForwardingInvoice/IndexForwardingInvoice" id="forwardinginvoice">Forwarding Invoice</a></li>
                 <li><a href="~/rcAdmin/HandlingFee" id="forwardinginvoice">Handing Fee</a></li>
                 <li><a href="~/rcAdmin/Accounting" id="accounting">Accounting</a></li>
+                <li><a href="~/rcAdmin/SubAccounting/" id="subAccounting">Sub Accounting</a></li>
+                <li><a href="~/rcAdmin/ForwardingStatus/" id="forwardingStatus">Forwarding Status</a></li>
             </ul>
         </li>
     </ul>
