--- a/rcAdmin/Countries/Index.cshtml
+++ b/rcAdmin/Countries/Index.cshtml
@@ -40,6 +40,7 @@
                     grid.Column(format: @<a href="WidgetsInSection.cshtml?cid=@item.Id_Country&pName=@item.Country_Name" title="Widgets"><img
                         src="images/widgets.gif" alt="Delete" class="rcGC" /></a>),
                                                               grid.Column("Country_Name", "Country name", style: "rcGB"),
+                                                              grid.Column("Comments", "Comments", style: "rcGB"),
                                                               grid.Column("Created_Date", format: @<i>@item.Created_Date</i>),
                     grid.Column(format: @<a href="Index?cid=@item.Id_Country" title="Delete" onclick="return confirm('Are you sure you want to delete ?')">
     <img src="images/delete.gif" alt="Delete" class="rcGC" />
