--- a/rcAdmin/_Menu.cshtml
+++ b/rcAdmin/_Menu.cshtml
@@ -19,14 +19,14 @@
                 <li><a href="~/rcAdmin/ChangePassword" id="changepassword">Change Password</a></li>
             </ul>
         </li>
-        <li class="has-sub"><a href="#"><span>Form</span></a>
+        <li class="has-sub"><a href="#"><span>Tracking tooling</span></a>
             <ul>
                 <li><a href="~/rcAdmin/Countries" id="country">Country</a></li>
                 <li><a href="~/rcAdmin/ForwardingCountries" id="forwardingcountry">Forwarding Country</a></li>
                 <li><a href="~/rcAdmin/ForwardingZone" id="forwardingZone">Forwarding Zone</a></li>
                 <li><a href="~/rcAdmin/ForwardingQuotation" id="forwardingQuotation">Forwarding Quotation</a></li>
                 <li><a href="~/rcAdmin/ForwardingServices/IndexForwardingServices" id="forwardingservice">Forwarding Service</a></li>
-                <li><a href="~/rcAdmin/ForwardingInvoice/IndexForwardingInvoice" id="forwardinginvoice">Forwarding Invoice</a></li>
+                <li><a href="~/rcAdmin/ForwardingInvoice/Index" id="forwardinginvoice">Forwarding Invoice</a></li>
                 <li><a href="~/rcAdmin/HandlingFee" id="forwardinginvoice">Handing Fee</a></li>
                 <li><a href="~/rcAdmin/Accounting" id="accounting">Accounting</a></li>
                 <li><a href="~/rcAdmin/SubAccounting/" id="subAccounting">Sub Accounting</a></li>
