--- a/rcAdmin/_LayoutCP.cshtml
+++ b/rcAdmin/_LayoutCP.cshtml
@@ -15,8 +15,8 @@
     <script type="text/javascript" src="~/rcAdmin/js/jquery.validate.js"></script>
     <script type="text/javascript" src="~/rcAdmin/js/jquery.validate.unobtrusive.js"></script>
     <link type="text/css" rel="Stylesheet" href="~/rcAdmin/css/jquery-ui.css" />
-    <link rel="stylesheet" type="text/css" href="../rcAdmin/css/reset.css"/>
-    <link rel="stylesheet" type="text/css" href="../rcAdmin/css/styles.css"/>
+    <link rel="stylesheet" type="text/css" href="~/rcAdmin/css/reset.css"/>
+    <link rel="stylesheet" type="text/css" href="~/rcAdmin/css/styles.css"/>
     @RenderSection("head", false)
 </head>
 <body>
