--- a/rcAdmin/css/rcCP.css
+++ b/rcAdmin/css/rcCP.css
@@ -181,7 +181,7 @@ fieldset {
         padding: 5px;
         font-size: 1.2em;
         color: #444;
-        width: 300px;
+        width: 91%;
     }
 
 fieldset select
