--- a/rcAdmin/Accounting/Index.cshtml
+++ b/rcAdmin/Accounting/Index.cshtml
@@ -48,33 +48,38 @@
 }
 
 <fieldset>
-    <legend>All Pages | <a href="~/rcAdmin/Accounting/New.cshtml">Create Account</a> </legend>
-    <div class="searchLine">
-        <form action="" method="POST">
-            <input type="text" id="search" name="searchAcc" value="" placeholder="Enter Account Name ..." class="ac ui-autocomplete-input"/> 
-            <button type="submit" value="Search" title="Search"><span class="icos-search"></span></button>
-        </form>
-    </div>
-    <div id="grid" class="widget">
-        @grid.GetHtml(
-                tableStyle: "tDark",
-                headerStyle: "",
-                alternatingRowStyle: "alt",
-                footerStyle: "pgr",
-                columns: grid.Columns(
+    <div class="widget">
+        <div class="whead">
+            <h6>All Pages | <a href="~/rcAdmin/Accounting/New.cshtml">Create Account</a></h6>
+            <div class="clear"></div>
+        </div>
+        <div class="searchLine">
+            <form action="" method="POST">
+                <input type="text" id="search" name="searchAcc" value="" placeholder="Enter Account Name ..." class="ac ui-autocomplete-input"/> 
+                <button type="submit" value="Search" title="Search"><span class="icos-search"></span></button>
+            </form>
+        </div>
+        <div id="grid" class="widget">
+            @grid.GetHtml(
+                    tableStyle: "tDark",
+                    headerStyle: "",
+                    alternatingRowStyle: "alt",
+                    footerStyle: "pgr",
+                    columns: grid.Columns(
                     
                     
-                    grid.Column("Account_Name", "Account name", style: "rcGB"),
-                    grid.Column("Country_Name", "Country Name", style: "rcGB"),
-                    grid.Column("Contact_Person", "Contact Person", style: "rcGB"),
-                    grid.Column("Created_Date", format: @<i>@item.Created_Date</i>),
-                    grid.Column(format: @<a href="~/rcAdmin/Accounting/Edit.cshtml?aid=@item.Id_Accounting" title="Edit Page">
-                                         <img src="~/rcAdmin/images/edit_page.gif" alt="Edit" class="rcGC" />
-                                         </a>),
-                    grid.Column(format: @<a href="~/rcAdmin/Accounting/Index.cshtml?aid=@item.Id_Accounting" title="Delete" onclick="return confirm('Are you sure you want to delete ?')">
-                                         <img src="~/rcAdmin/images/delete.gif" alt="Delete" class="rcGC" />
-                                         </a>)
+                        grid.Column("Account_Name", "Account name", style: "rcGB"),
+                        grid.Column("Country_Name", "Country Name", style: "rcGB"),
+                        grid.Column("Contact_Person", "Contact Person", style: "rcGB"),
+                        grid.Column("Created_Date", format: @<i>@item.Created_Date</i>),
+                        grid.Column(format: @<a href="~/rcAdmin/Accounting/Edit.cshtml?aid=@item.Id_Accounting" title="Edit Page">
+                                             <img src="~/rcAdmin/images/edit_page.gif" alt="Edit" class="rcGC" />
+                                             </a>),
+                        grid.Column(format: @<a href="~/rcAdmin/Accounting/Index.cshtml?aid=@item.Id_Accounting" title="Delete" onclick="return confirm('Are you sure you want to delete ?')">
+                                             <img src="~/rcAdmin/images/delete.gif" alt="Delete" class="rcGC" />
+                                             </a>)
+                      )
                   )
-              )
+        </div>
     </div>
 </fieldset>
